--- a/calculator.html
+++ b/calculator.html
@@ -23,8 +23,8 @@
         <button class="buttons">9</button>
         <button class="buttons" id="last-buttons">x</button>
         <button class="buttons" id="c-button">C</button>
-        <button class="buttons">←</button>
-        <button class="buttons" id="last-buttons">÷</button>
+        <button class="buttons">arr</button>
+        <button class="buttons" id="last-buttons">div</button>
       </div>
     </div>
     <script src="./calculator.js"></script>
